# yt-dlp-restate

./: .dockerignore  .editorconfig  .envrc  .gitignore  Dockerfile  LICENSE  README.md  devenv.nix  devenv.yaml  docker-compose.yaml  justfile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci-nix.yaml  ci.yaml  release.yaml
src/yt_dlp_restate/: __init__.py  downloader.py  restate.py  run.py
